--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,6 @@ psutil = "5.8.0"
 [build-system]
 requires = ["poetry-core>=1.0.0", "setuptools>=41.0.0", "wheel", "setuptools_rust>=0.10.2"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 120
