[CPP-59] Add Info.plist to app on Mac
Currently it only describes the icon for the app.

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -163,8 +163,11 @@ conda run -n $CONDA_ENV python utils/create_nuitka_script.py
 dependencies = ["prod-nuitka-build"]
 script_runner = "@shell"
 script = '''
-mkdir -p main.app/Contents/MacOS
-cp -r main.dist/* main.app/Contents/MacOS/.
+mkdir -p main.app/Contents/MacOS main.app/Contents/Resources
+cp -r main.dist/* main.app/Contents/MacOS/
+iconutil --convert icns src/main/icons/Mac.iconset
+mv src/main/icons/Mac.icns main.app/Contents/Resources/SwiftNavConsole.icns
+conda run -n $CONDA_ENV python src/build/generate-mac-info-plist.py
 hdiutil create -volname SwiftNavConsole -srcfolder main.app -ov -format UDZO 'swift_navigation_console.dmg'
 '''
 
