--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pkgconfig = "^1.5.1"
 Cython = "^0.29.21"
 nuitka = "^0.6.11"
 psutil = "5.8.0"
+qt5-applications = [{ version = "^5.15.2", platform = "linux" }]
 
 [build-system]
 requires = ["poetry-core>=1.0.0", "setuptools>=41.0.0", "wheel", "setuptools_rust>=0.10.2"]
