--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -34,6 +34,7 @@ pyparsing==2.4.7; python_version >= "3.5" and python_full_version < "3.0.0" or p
 pyside2==5.15.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0" and python_version < "3.10")
 pytest==5.4.3; python_version >= "3.5"
 pywin32-ctypes==0.2.0; sys_platform == "win32" and python_version >= "3.5"
+qt5-applications==5.15.2.2.1; sys_platform == "linux"
 regex==2020.11.13; python_version >= "3.6"
 semantic-version==2.8.5; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.5"
 setuptools-rust==0.11.6; python_version >= "3.5"
