--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -7,8 +7,13 @@ edition = "2018"
 
 [dependencies]
 capnp = "0.14"
+chrono = { version = "0.4", features = ["serde"] }
+csv = "1"
+paste = "1"
 pyo3 = { version = "0.13", features = ["extension-module"] }
 sbp = { git = "https://github.com/swift-nav/libsbp.git", rev = "0563350bb387e4a966a2b558adb7b05b2baf005f" }
+serde = { version = "1.0.123", features = ["derive"] }
+tempfile = "3.2.0"
 ordered-float = "2.0"
 ndarray = "0.14.0"
 glob = "0.3.0"
