--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -6,6 +6,8 @@ description = "A Python wrapper for the Rust console backend"
 edition = "2018"
 
 [dependencies]
+strum = "0.20"
+strum_macros = "0.20"
 capnp = "0.14"
 chrono = { version = "0.4", features = ["serde"] }
 csv = "1"
