--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 [dependencies]
 strum = "0.20"
 strum_macros = "0.20"
+lazy_static = "1.4.0"
 capnp = "0.14"
 chrono = { version = "0.4", features = ["serde"] }
 csv = "1"
