--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -22,7 +22,9 @@ ndarray = "0.14.0"
 glob = "0.3.0"
 criterion = "0.3.4"
 sysinfo = "0.16.4"
-serial = "0.4.0"
+serialport = "4.0.1"
+
+[target.'cfg(linux)'.dependencies]
 serialport = { version = "4.0.1", default-features = false }
 
 [[bench]]
