Add libudev-dev to linux CI.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
         shell: bash
         run: |
           if [ "$RUNNER_OS" == "Linux" ]; then
-              sudo apt-get install -y capnproto git-lfs
+              sudo apt-get install -y capnproto git-lfs libudev-dev
           elif [ "$RUNNER_OS" == "macOS" ]; then
               brew install capnp git-lfs
           elif [ "$RUNNER_OS" == "Windows" ]; then
@@ -121,7 +121,7 @@ jobs:
 
       - name: Install Dependencies.
         run: |
-          sudo apt-get install -y capnproto
+          sudo apt-get install -y capnproto libudev-dev
 
       - uses: conda-incubator/setup-miniconda@v2
         with:
@@ -196,7 +196,7 @@ jobs:
         shell: bash
         run: |
           if [ "$RUNNER_OS" == "Linux" ]; then
-              sudo apt-get install -y capnproto libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-render0 libxcb-shape0 libxcb-shm0 libxcb-sync1 libxcb-util1 libxcb-xfixes0 libxcb-xinerama0 libxcb-xkb1 libxkbcommon-x11-0 ruby ruby-dev rubygems build-essential
+              sudo apt-get install -y capnproto libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-render0 libxcb-shape0 libxcb-shm0 libxcb-sync1 libxcb-util1 libxcb-xfixes0 libxcb-xinerama0 libxcb-xkb1 libxkbcommon-x11-0 ruby ruby-dev rubygems build-essential libudev-dev
               sudo gem install --no-document fpm
           elif [ "$RUNNER_OS" == "macOS" ]; then
               brew install capnp
