--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -22,6 +22,10 @@ ndarray = "0.14.0"
 glob = "0.3.0"
 criterion = "0.3.4"
 sysinfo = "0.16.4"
+serialport = { version = "4.0.1", default-features = false }
+
+[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
+serialport = "4.0.1"
 
 [[bench]]
 name = "cpu_benches"
