--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -6,6 +6,9 @@ description = "A Python wrapper for the Rust console backend"
 edition = "2018"
 
 [dependencies]
+log = "0.4.14"
+async_logger_log = "0.2.0"
+async_logger = "0.3.3"
 strum = "0.20"
 strum_macros = "0.20"
 lazy_static = "1.4.0"
