Makefile.toml: Alias test to tests
tests depends on copy-capnp, which is needed to
build correctly.

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -28,6 +28,10 @@ init_task = "init"
 
 [tasks.init]
 
+# Create 'test' alias
+[tasks.test]
+dependencies = ["tests"]
+
 [tasks.poetry-export-dev]
 script_runner = "@shell"
 script = '''
