--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -14,7 +14,7 @@ chrono = { version = "0.4", features = ["serde"] }
 csv = "1"
 paste = "1"
 pyo3 = { version = "0.13", features = ["extension-module"] }
-sbp = { git = "https://github.com/swift-nav/libsbp.git", rev = "0563350bb387e4a966a2b558adb7b05b2baf005f" }
+sbp = { git = "https://github.com/swift-nav/libsbp.git", branch = "steve/time", features = ["swiftnav-rs"]}
 serde = { version = "1.0.123", features = ["derive"] }
 tempfile = "3.2.0"
 ordered-float = "2.0"
@@ -23,7 +23,6 @@ glob = "0.3.0"
 criterion = "0.3.4"
 sysinfo = "0.16.4"
 serialport = { version = "4.0.1", default-features = false }
-sbp-chopper={git="ssh://git@github.com/swift-nav/thachoppa.git", branch="john-michaelburke/console_pp_additions"}
 
 [target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
 serialport = "4.0.1"
