--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
     strategy:
       matrix:
         os:
-          # - ubuntu-20.04
-          # - macos-10.15
+          - ubuntu-20.04
+          - macos-10.15
           - windows-2019
 
     runs-on: ${{ matrix.os }}
@@ -45,29 +45,11 @@ jobs:
           & "C:\\Program Files\\Git\\bin\\sh.exe" -c "echo '${{ secrets.SSH_KEY }}' >> ~/.ssh/id_rsa"
         if: matrix.os == 'windows-2019'
 
-      - name: Install LLVM and Clang for Windows
+      - name: Install LLVM and Clang
         uses: KyleMayes/install-llvm-action@v1
         with:
           version: "10.0"
           directory: ${{ runner.temp }}/llvm
-        if: matrix.os == 'windows-2019'
-
-      - name: What is in folder.
-        env:
-          OS_NAME: ${{ runner.os }}
-          LIBCLANG_PATH: ${{ runner.temp }}/llvm
-        shell: bash
-        run: |
-          ls $LIBCLANG_PATH/bin
-
-      # - name: Install LLVM
-      #   run: choco install -y --no-progress llvm
-
-      # - name: Install msys2 packages
-      #   uses: msys2/setup-msys2@v2
-      #   with:
-      #     msystem: MINGW64
-      #     install: bash git
 
       - name: Install ${{ runner.os }} Dependencies.
         shell: bash
@@ -110,81 +92,81 @@ jobs:
         run: |
           cargo make backend-benches
 
-  # checks:
+  checks:
 
-  #   name: Code Quality Checks
+    name: Code Quality Checks
 
-  #   runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-  #   steps:
+    steps:
 
-  #     - name: Checkout source
-  #       uses: actions/checkout@v2
-  #       with:
-  #         submodules: recursive
-  #         ssh-key: ${{ secrets.SSH_KEY }}
-  #         ssh-strict: false
+      - name: Checkout source
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
+          ssh-key: ${{ secrets.SSH_KEY }}
+          ssh-strict: false
 
-  #     - uses: webfactory/ssh-agent@v0.5.0
-  #       with:
-  #         ssh-private-key: ${{ secrets.SSH_KEY }}
+      - uses: webfactory/ssh-agent@v0.5.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_KEY }}
 
-  #     - name: Pull Git LFS objects
-  #       run: git lfs pull
-  #       env:
-  #         GIT_SSH_COMMAND: ssh -o StrictHostKeyChecking=no
+      - name: Pull Git LFS objects
+        run: git lfs pull
+        env:
+          GIT_SSH_COMMAND: ssh -o StrictHostKeyChecking=no
 
-  #     - name: Install stable Rust
-  #       uses: actions-rs/toolchain@v1
-  #       with:
-  #         toolchain: stable
-  #         override: true
-  #         components: rustfmt, clippy
+      - name: Install stable Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+          components: rustfmt, clippy
 
-  #     - uses: davidB/rust-cargo-make@v1
-  #       with:
-  #         version: '0.32.11'
+      - uses: davidB/rust-cargo-make@v1
+        with:
+          version: '0.32.11'
 
-  #     - name: Install Dependencies.
-  #       run: |
-  #         sudo apt-get install -y capnproto libudev-dev
+      - name: Install Dependencies.
+        run: |
+          sudo apt-get install -y capnproto libudev-dev
 
-  #     - uses: conda-incubator/setup-miniconda@v2
-  #       with:
-  #         activate-environment: console_pp
-  #         environment-file: conda.yml
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          activate-environment: console_pp
+          environment-file: conda.yml
 
-  #     - name: Run Requirements Generation Check
-  #       run: |
-  #         cargo make poetry-export
-  #         git diff --exit-code
+      - name: Run Requirements Generation Check
+        run: |
+          cargo make poetry-export
+          git diff --exit-code
 
-  #     - name: Run Pip Install
-  #       run: |
-  #         cargo make pip-install-dev
+      - name: Run Pip Install
+        run: |
+          cargo make pip-install-dev
       
-  #     - name: Run Format Check
-  #       run: |
-  #         cargo make format-check
+      - name: Run Format Check
+        run: |
+          cargo make format-check
 
-  #     - name: Run Type Check
-  #       run: |
-  #         cargo make types
+      - name: Run Type Check
+        run: |
+          cargo make types
 
-  #     - name: Run Lint Check
-  #       run: |
-  #         cargo make lint
+      - name: Run Lint Check
+        run: |
+          cargo make lint
 
-  #     - name: Run Tests
-  #       run: |
-  #         cargo make tests
+      - name: Run Tests
+        run: |
+          cargo make tests
 
   build:
 
     name: Build Binaries
 
     needs:
-      # - checks
+      - checks
       - backend_bench
 
     strategy:
