--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["Swift Navigation <dev@swiftnav.com>"]
 python = ">=3.9,<3.10"
 PySide2 = "^5.15.2"
 fbs = { git = "https://github.com/silverjam/fbs.git" }
-pycapnp = { git = "https://github.com/silverjam/pycapnp.git", rev = "disable-import-hook" }
+pycapnp = { git = "https://github.com/jayvdb/pycapnp.git", rev = "bare-except" }
 
 [tool.poetry.dev-dependencies]
 black = "^21.5b0"
