--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,8 +1,8 @@
 altgraph==0.17; sys_platform == "darwin" and python_version >= "3.5"
 appdirs==1.4.4; python_version >= "3.6"
-astroid==2.5.3; python_version >= "3.6" and python_version < "4.0"
+astroid==2.5.6; python_version >= "3.6" and python_version < "4.0"
 atomicwrites==1.4.0; python_version >= "3.5" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.5" and python_full_version >= "3.4.0"
-attrs==20.3.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
+attrs==21.2.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 black==19.10b0; python_version >= "3.6"
 click==7.1.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 colorama==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" and sys_platform == "win32" or python_version >= "3.6" and python_version < "4.0" and sys_platform == "win32" and python_full_version >= "3.5.0"
@@ -17,7 +17,7 @@ mccabe==0.6.1; python_version >= "3.6" and python_version < "4.0"
 more-itertools==8.7.0; python_version >= "3.5"
 mypy-extensions==0.4.3; python_version >= "3.5"
 mypy==0.790; python_version >= "3.5"
-nuitka==0.6.12.4
+nuitka==0.6.14.6
 packaging==20.9; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.5"
 parso==0.8.2; python_version >= "3.6"
 pathspec==0.8.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
@@ -25,12 +25,12 @@ pefile==2019.4.18; sys_platform == "win32" and python_version >= "3.5"
 pkgconfig==1.5.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
 pluggy==0.13.1; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.5"
 psutil==5.8.0; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
-py2many @ git+https://github.com/jayvdb/py2many@console ; python_version >= "3.8"
+py2many @ git+https://github.com/john-michaelburke/py2many@john-michaelburke/add_enumvariantnames ; python_version >= "3.8"
 py==1.10.0; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.5"
 pycapnp @ git+https://github.com/silverjam/pycapnp.git@disable-import-hook
 pyinstaller-hooks-contrib==2021.1; python_version >= "3.5"
 pyinstaller==4.2; python_version >= "3.5"
-pylint==2.7.4; python_version >= "3.6" and python_version < "4.0"
+pylint==2.8.2; python_version >= "3.6" and python_version < "4.0"
 pyparsing==2.4.7; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.5"
 pyside2==5.15.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0" and python_version < "3.10")
 pytest==5.4.3; python_version >= "3.5"
@@ -42,6 +42,6 @@ setuptools-rust==0.11.6; python_version >= "3.5"
 shiboken2==5.15.2; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "3.10"
 toml==0.10.2; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.3.0" and python_version >= "3.6" and python_version < "4.0"
 typed-ast==1.4.3; python_version >= "3.6"
-typing-extensions==3.7.4.3; python_version >= "3.5"
+typing-extensions==3.10.0.0; python_version >= "3.5"
 wcwidth==0.2.5; python_version >= "3.5"
 wrapt==1.12.1; python_version >= "3.6" and python_version < "4.0"
