--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,13 +3,13 @@ appdirs==1.4.4; python_full_version >= "3.6.2"
 astroid==2.5.6; python_version >= "3.6" and python_version < "4.0"
 atomicwrites==1.4.0; python_version >= "3.5" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.5" and python_full_version >= "3.4.0"
 attrs==21.2.0; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.5"
-black==21.5b2; python_full_version >= "3.6.2"
+black==21.6b0; python_full_version >= "3.6.2"
 click==8.0.1; python_version >= "3.6" and python_full_version >= "3.6.2"
 colorama==0.4.4; python_version >= "3.6" and python_version < "4.0" and sys_platform == "win32" and python_full_version >= "3.6.2" and platform_system == "Windows"
 cython==0.29.23; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
 fbs @ git+https://github.com/silverjam/fbs.git@master
 future==0.18.2; sys_platform == "win32" and python_version >= "3.5" and python_full_version >= "3.6.0"
-isort==5.8.0; python_version >= "3.6" and python_version < "4.0"
+isort==5.9.1; python_full_version >= "3.6.1" and python_version < "4.0" and python_version >= "3.6"
 jedi==0.18.0; python_version >= "3.6"
 lazy-object-proxy==1.6.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.0"
 macholib==1.14; sys_platform == "darwin" and python_version >= "3.5"
@@ -28,7 +28,7 @@ psutil==5.8.0; (python_version >= "2.6" and python_full_version < "3.0.0") or (p
 py2many @ git+https://github.com/adsharma/py2many.git@main ; python_version >= "3.8"
 py==1.10.0; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.5"
 pycapnp==1.1.0
-pyinstaller-hooks-contrib==2021.1; python_version >= "3.5"
+pyinstaller-hooks-contrib==2021.2; python_version >= "3.5"
 pyinstaller==4.2; python_version >= "3.5"
 pylint==2.8.3; python_version >= "3.6" and python_version < "4.0"
 pyparsing==2.4.7; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.5"
@@ -41,6 +41,7 @@ semantic-version==2.8.5; python_version >= "3.5" and python_full_version < "3.0.
 setuptools-rust==0.11.6; python_version >= "3.5"
 shiboken2==5.15.2; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "3.10"
 toml==0.10.2; python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.2" and (python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.5")
+toposort==1.6; python_version >= "3.8"
 typed-ast==1.4.3; python_version >= "3.5"
 typing-extensions==3.10.0.0; python_version >= "3.5"
 wcwidth==0.2.5; python_version >= "3.5"
